# DiVERE

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Preview改进计划.md  README.md  pyproject.toml  requirements.txt
config/: .syncthing.app_settings.json.tmp  app_settings.json
config/colorspace/: ACEScg.json  AdobeRGB.json  AdobeRGB_Linear.json  DisplayP3.json  Film_EktarRGB.json  Film_KodakRGB_Linear.icc  Film_KodakRGB_Linear.json  FlextightX5_Linear.json  ProPhotoRGB.json  Rec2020.json  Rec2020_Linear.json  sRGB.json
config/curves/: Kodak_Endura_Paper.json  反差.json  暗部坠落.json
config/matrices/: Cineon_States_M_to_Print_Density.json  Identity.json  Ultramax-5000ED.json  pro160ns_calibrated_matrix_v6.json
divere/: __init__.py  __main__.py
divere/colorConstancyModels/: README.md  deep_wb_wrapper.py
divere/colorConstancyModels/utils/: __init__.py  gain_calculator.py
divere/core/: __init__.py  color_space.py  curve_editor.py  data_types.py  image_manager.py  lut_processor.py  the_enlarger.py
divere/ui/: __init__.py  config_manager_dialog.py  curve_editor_widget.py  main_window.py  parameter_panel.py  preview_widget.py  save_dialog.py
divere/utils/: __init__.py  config_manager.py  enhanced_config_manager.py
divere/utils/colorchecker/: Ultramax+2EV-5000ed-Croped-ACEScgLinear.tif  Ultramax-2EV-5000ed-Croped-ACEScgLinear.tif  Ultramax-5000ed-Croped-ACEScgLinear.tif  Ultramax-5000ed-Croped-ACEScgLinear_corrected.tif  Ultramax-5000ed-DMatrix.json  calibrate_scanner.py  calibrate_scanner_multi_patchs.py  jointMatrix.json
divere/utils/lut_generator/: README.md  USAGE.md  __init__.py  core.py  example.py  interface.py
packaging/: README.md  user_config_structure.md
packaging/scripts/: build_all.sh  build_linux.sh  build_macos.sh  build_windows.bat
